--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
 
   <link  href="css/bootstrap.css" rel="stylesheet">
-  <link  href="css/styles.css" rel="styleshehttps://github.com/njuhi/pig-dice.gitet">
+  <link  href="css/styles.css" rel="stylesheet">
   <title>PIG-DICE</title>
 </head>
 <body>
