--- a/index.html
+++ b/index.html
@@ -27,15 +27,19 @@
 
  </div>
 </div>
- <h2>rules</h2>
-<ul>
+<div class="container">
+ <div class="bod">
+  <h2>rules</h2>
+ <ul>
   <li>The dice is rolled once at every interval</li>
   <li>The dice stores data and gives the total score</li>
   <li>The dice gives the probability of the outcomes taken per roll</li>
   <li>The hold button is used to store the values </li>
   <li>if you roll only one then you have lost your values but if you use the hold button you have stored the previous data showing an increment</li>
   <li>After you reach the total score of a hundred you win the game only you are the fast</li>
-</ul>
+ </ul>
+ </div>
+</div>
   <script src="js/scripts.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script></html>
 </body>
